# proto-assignments

./: .gitignore  .gitmodules  .odt  1140224167.csync.files  1591917588.csync.files  1650353887.csync.files  1650353887.csync.folders  1703097112.csync.files  401820190.csync.files  461997299.csync.files  748011433.csync.files  CMakeLists.txt  FileClientStateChart.xml  FileServerClientStateChart.xml  README.md  README_tmp.html  benchmarkclient.py  benchmarkserver.py  compile_commands.json  csync.cpp  helpers.cpp  main.go  makefile  manualrun.txt  protocol.txt  protocol_design-ass-1.sublime-project  result.txt
1090626674/: .csync.files  .csync.folders
109110514/: .csync.files  .csync.folders
269917966/: .csync.files  .csync.folders
497263544/: .csync.files
549147473/: .csync.files  .csync.folders
740800992/: .csync.files  .csync.folders
936801031/: .csync.files  .csync.folders
992482379/: .csync.files  .csync.folders
plot/: testdat.csv  veusz.vsz
protocol_analysis/: protocol_analysis.pptx
specification/: Specification-PDF.md  Specification.pptx  Specification_extended.pptx
specification_1/: Specification.md  Specification.pptx  Specification_small.pptx
specification_2/: Specification-PDF.md  Specification.html  Specification2.md  Specification2_slides.pptx
specification_3/: benchmark.md  delta_sync.md  how_to_use.md  protocol.md  protocoll.md  security_considerations.md
specification_3/plot/: func.txt  testdat.csv  (+3 more)
src/: AbstractClient.cpp  AbstractClient.h  CMakeLists.txt  CSync.cpp  CSync.h  ClientToDo.cpp  ClientToDo.h  ClientsToDo.cpp  ClientsToDo.h  Consts.h  DiffieHellman.cpp  DiffieHellman.h  FileClient.cpp  FileClient.h  FileClient2.cpp  FileClient2.h  FileServer.cpp  FileServer.h  FileServer2.cpp  FileServer2.h  FileServerClient.cpp  FileServerClient.h  FileServerUser.cpp  FileServerUser.h  Filestructures.h  Filesystem.cpp  Filesystem.h  Filesystem2.cpp  Filesystem2.h  Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  Queue.h  Timer.cpp  Timer.h  TimerTickable.h  UserStore.cpp  UserStore.h  WorkingSet.h  (+7 more)
src/lib/: disclaimer.txt
src/lib/zedwood/: disclaimer
src/net/: AbstractMessage.cpp  AbstractMessage.h  AckMessage.cpp  AckMessage.h  AuthRequestMessage.cpp  AuthRequestMessage.h  AuthResultMessage.cpp  AuthResultMessage.h  CMakeLists.txt  Client.cpp  Client.h  Client2.cpp  Client2.h  ClientHelloMessage.cpp  ClientHelloMessage.h  FileCreationMessage.cpp  FileCreationMessage.h  FileStatusMessage.cpp  FileStatusMessage.h  FileTransferMessage.cpp  FileTransferMessage.h  MessageParser.cpp  MessageParser.h  PingMessage.cpp  PingMessage.h  Server.cpp  Server.h  Server2.cpp  Server2.h  ServerHelloMessage.cpp  ServerHelloMessage.h  State.h  TransferEndedMessage.cpp  TransferEndedMessage.h
src/sec/: CMakeLists.txt  DiffieHellman.cpp  DiffieHellman.h  b64.h  encrypt.h  vigenere.h
src/test/: CMakeLists.txt  UnitTests.cpp  UnitTests.h
